# PowerControllerViewer

./: .gitignore  PowerControllerUI.ps1  PowerControllerUI.sh  PowerControllerUIConfig.yaml.example  README.md  config.example  config.yaml.example  config_example.yaml  config_schemas.py  deploy.sh  enumerations.py  helper.py  launch.sh  main.py  pyproject.toml  restart_service.sh  utility.py  views.py  wsgi.py
.claude/: settings.local.json
src/: Refactor PowerControllerViewer.md  __init__.py  config_schemas.py  helper.py  housekeeping.py  ingest.py  main.py  routes.py  state_store.py  views.py  websocket_manager.py  wsgi.py
src/view_models/: common.py  home.py  lighting.py  metering.py  power.py  temp_probes.py
state_data/: Hot Water.json  Pool Pump.json  iMac Pool Pump.json
static/: index.js  styles.css
templates/: _base.html  daily.html  daily_amberpower.html  daily_lightingcontrol.html  daily_power.html  home.html  home_amberpower.html  home_lightingcontrol.html  index.html  no_state.html  summary_lightingcontrol.html  summary_output_metering.html  summary_power.html  temp_probes.html
